{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 15,
  "lineage": "86ae164c-e9f1-de9d-bb18-4974055f6fa8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zz-tt-6-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:internet-gateway/igw-0e1c80b8b5b6149f9",
            "id": "igw-0e1c80b8b5b6149f9",
            "owner_id": "899538497933",
            "tags": {
              "Name": "zz-tt-6-IGW"
            },
            "tags_all": {
              "Name": "zz-tt-6-IGW"
            },
            "vpc_id": "vpc-0df2ca8b4a5649039"
          },
          "dependencies": [
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zz-tt-6-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:route-table/rtb-0c317ec98e981aae5",
            "id": "rtb-0c317ec98e981aae5",
            "owner_id": "899538497933",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1c80b8b5b6149f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zz-tt-6-pub-rt"
            },
            "tags_all": {
              "Name": "zz-tt-6-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2ca8b4a5649039"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.zz-tt-6-IGW",
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zz-tt-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0480e847d3a9ae004",
            "route_table_id": "rtb-0c317ec98e981aae5",
            "subnet_id": "subnet-0f37431f653b32512"
          },
          "dependencies": [
            "aws_internet_gateway.zz-tt-6-IGW",
            "aws_route_table.zz-tt-6-pub-rt",
            "aws_subnet.zz-tt-6-pub-1",
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zz-tt-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff04c358dba04d42",
            "route_table_id": "rtb-0c317ec98e981aae5",
            "subnet_id": "subnet-04a509cecbe39fe6b"
          },
          "dependencies": [
            "aws_internet_gateway.zz-tt-6-IGW",
            "aws_route_table.zz-tt-6-pub-rt",
            "aws_subnet.zz-tt-6-pub-2",
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zz-tt-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0260cdbb70c7ffb30",
            "route_table_id": "rtb-0c317ec98e981aae5",
            "subnet_id": "subnet-020c375edcb2c5a59"
          },
          "dependencies": [
            "aws_internet_gateway.zz-tt-6-IGW",
            "aws_route_table.zz-tt-6-pub-rt",
            "aws_subnet.zz-tt-6-pub-3",
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zz-tt-stack-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:security-group/sg-08d2607a4ee94bf85",
            "description": "zz-tt-sg for stack",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d2607a4ee94bf85",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.3.117.241/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "zz-tt-stack-sg",
            "name_prefix": "",
            "owner_id": "899538497933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh"
            },
            "tags_all": {
              "Name": "allow ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2ca8b4a5649039"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zz-tt-6-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:subnet/subnet-0930fdbfc21c352bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0930fdbfc21c352bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899538497933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zz-tt-6-priv-1"
            },
            "tags_all": {
              "Name": "zz-tt-6-priv-1"
            },
            "vpc_id": "vpc-0df2ca8b4a5649039"
          },
          "dependencies": [
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zz-tt-6-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:subnet/subnet-0d8cb3b85664d7168",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8cb3b85664d7168",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899538497933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zz-tt-6-priv-2"
            },
            "tags_all": {
              "Name": "zz-tt-6-priv-2"
            },
            "vpc_id": "vpc-0df2ca8b4a5649039"
          },
          "dependencies": [
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zz-tt-6-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:subnet/subnet-0726c86d18b0b2b2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0726c86d18b0b2b2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899538497933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zz-tt-6-priv-3"
            },
            "tags_all": {
              "Name": "zz-tt-6-priv-3"
            },
            "vpc_id": "vpc-0df2ca8b4a5649039"
          },
          "dependencies": [
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zz-tt-6-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:subnet/subnet-0f37431f653b32512",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f37431f653b32512",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899538497933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zz-tt-6-pub-1"
            },
            "tags_all": {
              "Name": "zz-tt-6-pub-1"
            },
            "vpc_id": "vpc-0df2ca8b4a5649039"
          },
          "dependencies": [
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zz-tt-6-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:subnet/subnet-04a509cecbe39fe6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a509cecbe39fe6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899538497933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zz-tt-6-pub-2"
            },
            "tags_all": {
              "Name": "zz-tt-6-pub-2"
            },
            "vpc_id": "vpc-0df2ca8b4a5649039"
          },
          "dependencies": [
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zz-tt-6-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:subnet/subnet-020c375edcb2c5a59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020c375edcb2c5a59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899538497933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zz-tt-6-pub-3"
            },
            "tags_all": {
              "Name": "zz-tt-6-pub-3"
            },
            "vpc_id": "vpc-0df2ca8b4a5649039"
          },
          "dependencies": [
            "aws_vpc.zz-tt-6-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:vpc/vpc-0971db4a833c9bf62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-071df82c4a51f5bf5",
            "default_route_table_id": "rtb-0ed439339e028d7bf",
            "default_security_group_id": "sg-03e52d4b1a7aa7b38",
            "dhcp_options_id": "dopt-07f5c1f9fbfb9011f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0971db4a833c9bf62",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed439339e028d7bf",
            "owner_id": "899538497933"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zz-tt-6-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:899538497933:vpc/vpc-0df2ca8b4a5649039",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034a27c38a2d3b601",
            "default_route_table_id": "rtb-0222039e2acfc7317",
            "default_security_group_id": "sg-04c661c1f797d5540",
            "dhcp_options_id": "dopt-07f5c1f9fbfb9011f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df2ca8b4a5649039",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0222039e2acfc7317",
            "owner_id": "899538497933",
            "tags": {
              "Name": "zz-tt-6"
            },
            "tags_all": {
              "Name": "zz-tt-6"
            }
          }
        }
      ]
    }
  ]
}